--- a/waybar/style.css
+++ b/waybar/style.css
@@ -34,14 +34,13 @@ window#waybar.chromium {
 }
 
 #workspaces button:hover {
-    color: #03045E;
-    box-shadow: inset 0 -3px #0096C7;
+    box-shadow: inset 0 -3px #CAF0F8;
 }
 
 #workspaces button.focused {
-    color: #ADE8F4;
-    background-color: #0077B6;
-    box-shadow: inset 0 -3px #ADE8F4;
+    color: #CAF0F8;
+    background-color: #023E8A;
+    box-shadow: inset 0 -3px #0077B6;
 }
 
 #workspaces button.urgent {
@@ -52,7 +51,6 @@ window#waybar.chromium {
 
 #mode {
     background-color: #023E8A;
-    border-bottom: 3px solid #ADE8F4;
 }
 
 #clock,
@@ -69,7 +67,6 @@ window#waybar.chromium {
 #idle_inhibitor,
 #mpd {
     padding: 0 4px;
-    color: #ffffff;
 }
 
 #window,
