--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,7 @@
 * {
     font-family: Source Code Pro, Material Design Icons;
     font-size: 14px;
+    border-radius: 0px;
 }
 
 window#waybar {
@@ -15,26 +16,23 @@ window#waybar.hidden {
     opacity: 0.2;
 }
 
-window#waybar.termite {
+button {
+    color: #ADB5BD;
     background-color: #343A40;
 }
 
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-}
-
 #workspaces button {
-    padding: 0 4px;
+    padding: 0px 4px;
     background-color: transparent;
     color: #E9ECEF;
     box-shadow: inset 0 -3px transparent;
     border: none;
-    border-radius: 0;
 }
 
-#workspaces button:hover {
-    box-shadow: inset 0 -3px #6C757D;
+button:hover {
+    background: inherit;
+    box-shadow: none;
+    transition-duration: .3s;
 }
 
 #workspaces button.focused {
@@ -68,12 +66,12 @@ window#waybar.chromium {
 #bluetooth,
 #language,
 #mpd {
-    padding: 0 4px;
+    padding: 0px 4px;
 }
 
 #window,
 #workspaces {
-    margin: 0 4px;
+    margin: 0px 4px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
@@ -88,10 +86,6 @@ window#waybar.chromium {
 
 #clock {
     background-color: transparent;
-}
-
-#battery {
-    background-color: #343A40;
 }
 
 #battery.charging, #battery.plugged {
@@ -120,43 +114,14 @@ label:focus {
     background-color: #000000;
 }
 
-#cpu {
-    background-color: #343A40;
-}
-
-#memory {
-    background-color: #343A40;
-}
-
-#disk {
-    color: #000000;
-    background-color: #343A40;
-}
-
-#backlight {
-    background-color: #343A40;
-}
-
-#network {
-    background-color: #343A40;
-}
-
 #network.disconnected {
     color: #E9ECEF;
     background-color: #6C757D;
 }
 
-#pulseaudio {
-    background-color: #343A40;
-}
-
 #pulseaudio.muted {
     background-color: #6C757D;
     color: #ADB5BD;
-}
-
-#temperature {
-    background-color: #343A40;
 }
 
 #temperature.critical {
@@ -177,17 +142,9 @@ label:focus {
     background-color: #ADB5BD;
 }
 
-#idle_inhibitor {
-    background-color: #343A40;
-}
-
 #idle_inhibitor.activated {
     background-color: #6C757D;
     color: #E9ECEF;
-}
-
-#bluetooth {
-    background-color: #343A40;
 }
 
 #bluetooth.on {
