--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,155 +1,123 @@
 * {
-    font-family: Source Code Pro, Material Design Icons;
-    font-size: 14px;
-    border-radius: 0px;
+  font-family: Symbols Nerd Font Mono, Arimo Nerd Font;
+  font-size: 12px;
 }
 
 window#waybar {
-    background-color: #212529;
-    color: #ADB5BD;
-    opacity: 0.8;
-    transition-property: background-color;
-    transition-duration: .5s;
+  background-color: black;
+  color: white;
 }
 
 window#waybar.hidden {
-    opacity: 0.2;
+  opacity: 0.2;
 }
 
 button {
-    color: #ADB5BD;
-    background-color: #343A40;
+  box-shadow: inset 0 -1px transparent;
+  border: none;
+  border-radius: 0;
+}
+
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+button:hover {
+  background: inherit;
+  box-shadow: inset 0 -1px white;
 }
 
 #workspaces button {
-    padding: 0px 4px;
-    background-color: transparent;
-    color: #E9ECEF;
-    box-shadow: inset 0 -3px transparent;
-    border: none;
+  padding: 0 3px;
+  background-color: transparent;
+  color: #ffffff;
 }
 
-button:hover {
-    background: inherit;
-    box-shadow: none;
-    transition-duration: .3s;
+#workspaces button:hover {
+  background: rgba(0, 0, 0, 0.2);
 }
 
 #workspaces button.focused {
-    color: #F8F9FA;
-    background-color: #495057;
-    box-shadow: inset 0 -3px #6C757D;
+  border: 1px solid white;
 }
 
 #workspaces button.urgent {
-    color: #212529;
-    background-color: #ADB5BD;
-    box-shadow: inset 0 -3px #343A40;
+  box-shadow: inset 0 -3px red;
 }
 
 #mode {
-    background-color: #F8F9FA;
+  border: 1px solid white;
 }
 
 #clock,
 #battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
+#bluetooth,
 #network,
 #pulseaudio,
+#idle_inhibitor,
 #tray,
 #mode,
-#idle_inhibitor,
-#bluetooth,
-#language,
 #mpd {
-    color: #ADB5BD;
-    background-color: #343A40;
-    padding: 0px 4px;
+  padding: 0 5px;
+  color: white;
+  border-top: 1px solid white;
 }
 
 #window,
 #workspaces {
-    margin: 0px 4px;
+  margin: 0 2px;
 }
 
-/* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
+  margin-left: 0;
 }
 
-/* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 #clock {
-    background-color: transparent;
+  border: none;
 }
 
-#battery.charging, #battery.plugged {
-    color: #E9ECEF;
-    background-color: #6C757D;
+#battery.charging,
+#battery.plugged {
+  border-bottom: 1px white;
 }
 
 @keyframes blink {
-    to {
-        background-color: #6C757D;
-        color: #E9ECEF;
-    }
+  to {
+    border-top: 1px white;
+  }
 }
 
 #battery.critical:not(.charging) {
-    background-color: #F94144;
-    color: #F8F9FA;
-    animation-name: blink;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-label:focus {
-    background-color: #000000;
+  border: 1px red;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 #network.disconnected {
-    color: #E9ECEF;
-    background-color: #6C757D;
+  opacity: 0.5;
 }
 
 #pulseaudio.muted {
-    background-color: #6C757D;
-    color: #ADB5BD;
-}
-
-#temperature.critical {
-    background-color: #F3722C;
-    color: #343A40;
-}
-
-#tray {
-    background-color: #495057;
+  opacity: 0.5;
 }
 
 #tray > .passive {
-    -gtk-icon-effect: dim;
+  -gtk-icon-effect: dim;
 }
 
 #tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #ADB5BD;
-}
-
-#idle_inhibitor.activated {
-    background-color: #6C757D;
-    color: #E9ECEF;
+  -gtk-icon-effect: highlight;
+  background-color: red;
 }
 
 #bluetooth.on {
-    background-color: #6C757D;
-    color: #E9ECEF;
+  border-bottom: 1px solid white;
+}
+
+#idle_inhibitor.activated {
+  border-bottom: 1px solid white;
 }
